change waterRate rout
