# src/controllers/waters.js
@@ -1,80 +1,82 @@
+/* import SendmailTransport from 'nodemailer/lib/sendmail-transport/index.js'; */
 import {
-    updateWaterRateService,
-    addWaterNoteService,
-    updateWaterNoteService,
-    deleteWaterNoteService,
-    getUserWaterConsumptionForToday
-} from "../services/water.js";
+  updateWaterRateService,
+  addWaterNoteService,
+  updateWaterNoteService,
+  deleteWaterNoteService,
+  getUserWaterConsumptionForToday,
+} from '../services/water.js';
 
 export const updateWaterRate = async (req, res) => {
-    const { dailyNorm } = req.body;
-    const userId = req.user._id;
+  const { dailyNormWater } = req.body;
+  const userId = req.user._id;
 
-    const result = await updateWaterRateService(userId, dailyNorm);
+  const waterRate = await updateWaterRateService(userId, dailyNormWater);
 
-    if (result.message === "created") {
-        return res.status(201).json({
-            message: "Daily water norm created successfully",
-            data: result.data,
-        });
-    }
-
-    return res.status(200).json({
-        message: "Daily water norm updated successfully",
-        data: result.data,
-    });
+  return res.status(200).json({
+    message: 'Daily water norm updated successfully',
+    data: waterRate.data,
+  });
 };
 
 export const addWaterNote = async (req, res) => {
-    const { amount, date, dailyNorm } = req.body;  
-    const owner = req.user._id;
-            
-    const waterNote = await addWaterNoteService(owner, amount, date, dailyNorm); 
+  const { amount, date, dailyNorm } = req.body;
+  const owner = req.user._id;
 
-    return res.status(201).json({
-        message: "Water consumption note added successfully",
-        data: waterNote,
-    });
+  const waterNote = await addWaterNoteService(owner, amount, date, dailyNorm);
+
+  return res.status(201).json({
+    message: 'Water consumption note added successfully',
+    data: waterNote,
+  });
 };
 
 export const updateWaterNote = async (req, res) => {
-    const { waterNoteId } = req.params;
-    const { amount, date } = req.body;
-    const userId = req.user._id;
+  const { waterNoteId } = req.params;
+  const { amount, date } = req.body;
+  const userId = req.user._id;
 
-    const updatedWaterNote = await updateWaterNoteService(waterNoteId, amount, userId, date);
+  const updatedWaterNote = await updateWaterNoteService(
+    waterNoteId,
+    amount,
+    userId,
+    date,
+  );
 
-    return res.status(200).json({
-        message: "Water note updated successfully",
-        data: updatedWaterNote,
-    });
+  return res.status(200).json({
+    message: 'Water note updated successfully',
+    data: updatedWaterNote,
+  });
 };
 
 export const deleteWaterNote = async (req, res) => {
-    const { waterNoteId } = req.params;
-    const userId = req.user._id;
+  const { waterNoteId } = req.params;
+  const userId = req.user._id;
 
-    await deleteWaterNoteService(waterNoteId, userId);
+  await deleteWaterNoteService(waterNoteId, userId);
 
-    return res.status(200).json({
-        message: "Water note deleted successfully",
-    });
+  return res.status(200).json({
+    message: 'Water note deleted successfully',
+  });
 };
 
 export const getTodayWaterConsumption = async (req, res) => {
-    const userId = req.user._id;
+  const userId = req.user._id;
 
-    const { totalAmount, dailyNorm, notes } = await getUserWaterConsumptionForToday(userId);
+  const { totalAmount, dailyNorm, notes } =
+    await getUserWaterConsumptionForToday(userId);
 
-    const percentage = dailyNorm ? ((totalAmount / dailyNorm) * 100).toFixed(2) : 0;
+  const percentage = dailyNorm
+    ? ((totalAmount / dailyNorm) * 100).toFixed(2)
+    : 0;
 
-    return res.status(200).json({
-        message: "Today's water consumption data",
-        data: {
-            percentage,
-            totalAmount,
-            dailyNorm,
-            notes,
-        },
-    });
+  return res.status(200).json({
+    message: "Today's water consumption data",
+    data: {
+      percentage,
+      totalAmount,
+      dailyNorm,
+      notes,
+    },
+  });
 };
